apps/demo-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-echo
  labels:
    app: app-echo
spec:
  type: NodePort
  selector:
    app: app-echo
  ports:
    - port: 80
      targetPort: 8888
